--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 logging.level.root=DEBUG
 
+eureka.client.register-with-eureka=false
 
 spring.application.name=sfg-brewery-gateway
 server.port=9090
+
+logging.level.org.springframework.cloud.gateway=debug
