--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ server.port=9090
 logging.level.org.springframework.cloud.gateway=debug
 
 spring.zipkin.baseUrl=http://192.168.99.100:9411/
+
+eureka.client.service-url.defaultZone=http://netflix:eureka@localhost:8761/eureka
