--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,6 @@ server.port=9090
 
 logging.level.org.springframework.cloud.gateway=debug
 
-spring.zipkin.baseUrl=http://192.168.99.100:9411/
+spring.zipkin.baseUrl=http://localhost:9411/
 
 eureka.client.service-url.defaultZone=http://netflix:eureka@localhost:8761/eureka
